# informatic

./: .gitignore  README.md  makefile
3dz/: main.cpp  merge_sort.cpp  quick_sort.cpp  radix_sort.cpp  test.cpp
5dz/: main.cpp
algorythmisation_2_hm/: main.cpp  test.cpp
astar/: CMakeLists.txt  main.cpp
c2python/: main.c  main.py
cells/src/: main.cpp
console_apps/: arrays.cpp  arrays.py  main  main-linux  set.cpp  set.py
game/: .clangd  .gitignore  CMakeLists.txt
game/src/: GameScene.cpp
graph/src/: main.cpp
life/src/: main.cpp
oop/: CMakeLists.txt
oop/src/: GameObject.cpp  GameObject.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  main.cpp
plot/: .gitignore  CMakeLists.txt
snake/: CMakeLists.txt
snake/src/: Snake.cpp  Snake.h  main.cpp
testing/: CMakeLists.txt
testing/src/: CarEmitter.cpp  CarEmitter.h  Emitter.cpp  Emitter.h  FactoryEmitter.cpp  FactoryEmitter.h  function.h  main.cpp
testing/tests/: test_emitter.cpp  test_functions.cpp
практика_4/: main  main-linux  main.cpp
